--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,13 @@ body{
   background: radial-gradient(var(--light-primary), var(--primary), var(--dark-primary));
 }
 
+.body-flex{
+  display:flex;
+  justify-content:center;
+  align-items: center;
+  flex-direction: column;
+}
+
 #wrapper{
   display:flex;
   flex-direction: column;
@@ -25,6 +32,7 @@ body{
   justify-content:center;
   align-items: center;
   flex-direction: column;
+  padding:0 1.5rem;
 }
 
 
